skaha-k8s-config/keel-dev/reg/ingress/reg-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: reg-ingress
  namespace: skaha-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /reg/$2
    nginx.ingress.kubernetes.io/proxy-body-size: 100g
spec:
  rules:
  - host: keel-dev-ingress.cloud.computecanada.ca
    http:
      paths:
      - path: /reg(/|$)(.*)
        backend:
          serviceName: reg-tomcat-svc
          servicePort: 8080
